# python-tools

./: .gitignore  LEFT_OFF  README.md  pyproject.toml  pytest.ini
pyfmt/: __init__.py  __main__.py  cli.py  passes.py  repair.py
repairer/: initial-prompt.md
repairer/tests/: test_cli.py  test_dedent.py
stream-spy/: README.md  TODO-TTY-STDIN-IS-NOT-WORKING  pyproject.toml
stream-spy/stream_spy/: __init__.py  __main__.py  stream_spy.py
stream-spy/tests/: test_stream_spy.py
